# bottibot

./: .gitignore  CLAUDE.md  README.md  backtest.py  config.py  main.py  pyproject.toml
analysis/: fundamental.py  technical.py
bot/: digest.py  formatting.py  storage.py  telegram.py
dashboard/: app.py
data/: fetcher.py
scoring/: engine.py
